Added WebView and text to About page.

--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -9,17 +9,28 @@
 <style>
     body {
         padding:2%;
-        margin-top: 10%;
         border:3px solid black;
         background: linear-gradient(to bottom right, #CBC3E3, #FDDFDF, #DEF3FD, lightgrey);
         text-align: center;
+        font-variant:small-caps;
         height: 100vh;
     }
+    h1 {
+        font-family:cursive;
+        font-variant:normal;
+        font-size:35px;
+    }
+
 </style>
 <body>
 <h1>About Us</h1>
-<p>Hello</p><br>
-<p style="color:#fc5e79; font-size: xx-large;">❤</p>
+<p style="color:#fc5e79; font-size: 35px;">❤</p>
+<p>
+    WonderApp is a fun application for anyone compelled to increasing their knowledge
+    about history and its many accomplishments. Currently, in the app you can explore the
+    interesting facts about the wonders of the world. In the future more features may
+    be added such as quizzes, history facts and stories.
+</p><br>
 
 </body>
 </html>
