--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -10,7 +10,7 @@
     body {
         padding:2%;
         border:3px solid black;
-        background: linear-gradient(to bottom right, #CBC3E3, #FDDFDF, #DEF3FD, lightgrey);
+        background: linear-gradient(to bottom right, #CBC3E3, #FDDFDF, #DEF3FD, #F3FFF3);
         text-align: center;
         font-variant:small-caps;
         height: 100vh;
@@ -26,10 +26,10 @@
 <h1>About Us</h1>
 <p style="color:#fc5e79; font-size: 35px;">❤</p>
 <p>
-    WonderApp is a fun application for anyone compelled to increasing their knowledge
+    WonderApp is a fun application for anyone compelled to increase their knowledge
     about history and its many accomplishments. Currently, in the app you can explore the
     interesting facts about the wonders of the world. In the future more features may
-    be added such as quizzes, history facts and stories.
+    be added such as quizzes, history facts, more stories and learning tools.
 </p><br>
 
 </body>
